# software_arq_robots_course

./: .gitmodules  .travis  .travis.yml  README.md
.github/workflows/: master.yaml
basics_ros/: CMakeLists.txt  package.xml
basics_ros/launch/: pubsub.launch
basics_ros/src/: nodo_iterativo.cpp  nodo_pub.cpp  nodo_simple.cpp  nodo_sub.cpp  nodo_sub_async.cpp  nodo_sub_obj.cpp
behavior_trees/: CMakeLists.txt  package.xml
behavior_trees/behavior_trees_xml/: tree_1.xml  tree_2.xml  tree_3.xml  tree_4.xml  tree_bump.xml
behavior_trees/include/behavior_trees/: ApproachObject.h  BTNavAction.h  Back.h  CheckBattery.h  CloseGripper.h  Forward.h  Is_bumped.h  Move.h  OpenGripper.h  Turn.h
behavior_trees/src/: nodo_behavior_trees.cpp  nodo_bump.cpp
behavior_trees/src/behavior_trees/: ApproachObject.cpp  Back.cpp  CheckBattery.cpp  CloseGripper.cpp  Forward.cpp  Is_bumped.cpp  Move.cpp  OpenGripper.cpp  Turn.cpp
bumpgo/: CMakeLists.txt  package.xml
bumpgo/src/: nodo_bumpgo.cpp
cameras_cpp/: CMakeLists.txt  package.xml
cameras_cpp/src/: nodo_bbx.cpp  nodo_camera.cpp  nodo_rgbd_filter.cpp  nodo_rgbd_filter_img.cpp  nodo_rgbd_tf.cpp
comms_cpp/: CMakeLists.txt  package.xml
comms_cpp/launch/: pubsub.launch
comms_cpp/src/: nodo_distance_client.cpp  nodo_distance_server.cpp  nodo_nav_client.cpp  nodo_point_pub.cpp  nodo_point_sub.cpp  nodo_sequence_client.cpp  nodo_sequence_server.cpp
geometry_tf/: CMakeLists.txt  package.xml
geometry_tf/include/geometry_tf/: transforms.h
geometry_tf/src/: nodo_tf_pub.cpp  nodo_tf_sub.cpp  nodo_tf_sub_rgbd.cpp
geometry_tf/src/geometry_tf/: transforms.cpp
navigation/: CMakeLists.txt  package.xml
navigation/launch/: localization.launch  navigation.launch  octomap_mapping.launch  slam_mapping.launch  static_map.launch
navigation/launch/includes/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml  velocity_smoother.launch.xml
navigation/maps/: GrannieAnnie.yaml  map.pgm  map.yaml  static.pgm  static_map.yaml
navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  smoother.yaml  trajectory_planner_params.yaml
navigation/src/: navigate_to_wp.cpp
parameters_cpp/: CMakeLists.txt  package.xml
parameters_cpp/config/: config_1.yaml
parameters_cpp/launch/: params.launch  params_config.launch
parameters_cpp/src/: nodo_parameter_reader.cpp
plansys2_tools/: CMakeLists.txt  package.xml  plugin_performers.xml  setup.py
plansys2_tools/include/rqt_plansys2_performers/: RQTPerformers.hpp
plansys2_tools/src/rqt_plansys2_performers/: RQTPerformers.cpp  rqt_plansys2_performers.ui
robots/: CMakeLists.txt  package.xml
robots/definition/robot/: my_laser_config.yaml
robots/definition/sim/: hokuyo.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  my_laser_config.yaml
robots/definition/sim/urdf/: create.urdf.xacro  kobuki.urdf.xacro  turtlebot_common_library.urdf.xacro
robots/definition/sim/urdf/sensors/: astra.urdf.xacro  asus_xtion_pro.urdf.xacro  asus_xtion_pro_offset.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro
robots/definition/sim/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
robots/launch/: kobuki_astra.launch  kobuki_hokuyo_xtion.launch  kobuki_rplidar.launch  kobuki_rplidar_astra.launch  kobuki_rplidar_xtion.launch  kobuki_xtion.launch  real_hokuyo.launch  real_rplidar.launch  sim.launch
robots/launch/includes/: robot.launch.xml
softarq_msgs/: CMakeLists.txt  package.xml
softarq_msgs/action/: Sequence.action
softarq_msgs/srv/: Distance.srv
testing/: CMakeLists.txt  package.xml
testing/include/testing/: Duplicator.hpp
testing/src/: main_node.cpp
testing/src/testing/: Duplicator.cpp
testing/tests/: test_node_tests.cpp
