<?xml version="1.0"?>
<package format="2">
  <name>behavior_trees</name>
  <version>0.1.0</version>
  <description>The behavior_trees package</description>

  <maintainer email="fmrico@gmail.com">fmrico</maintainer>

  <license>Apache 2</license>
  <url type="website">https://www.aulavirtual.urjc.es/moodle/course/view.php?id=144699</url>

  <author email="fmrico@gmail.com">Francisco Martín</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>behaviortree_cpp_v3</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>

  <export>
  </export>
</package>
