<?xml version="1.0"?>
<package format="2">
  <name>bumpgo</name>
  <version>0.0.0</version>
  <description>The bump and go package</description>

  <maintainer email="fmrico@gmail.com">fmrico</maintainer>

  <license>Apache 2</license>
  <url type="website">https://www.aulavirtual.urjc.es/moodle/course/view.php?id=144699</url>

  <author email="fmrico@gmail.com">Francisco Martín</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>
 
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>