<?xml version="1.0"?>
<package>
  <name>comms_cpp</name>
 <version>0.0.1</version>
  <description>Paquete comms</description>

  <maintainer email="fmrico@gmail.com">paco</maintainer>
  <license>GPLv3</license>

  <author email="fmrico@gmail.com">Francisco Martín Rico</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>softarq_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>softarq_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>

  <export>
  </export>
</package>