<?xml version="1.0"?>
<package>
  <name>geometry_tf</name>
 <version>0.0.1</version>
  <description>Package for geometry transformations</description>

  <maintainer email="fmrico@gmail.com">paco</maintainer>
  <license>GPLv3</license>

  <author email="fmrico@gmail.com">Francisco Martín Rico</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>