<?xml version="1.0"?>
<package>
  <name>softarq_msgs</name>
 <version>0.0.1</version>
  <description>The messages for softarq course</description>

  <maintainer email="fmrico@gmail.com">paco</maintainer>
  <license>GPLv3</license>

  <author email="fmrico@gmail.com">Francisco Martín Rico</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>