<?xml version="1.0"?>
<package format="2">
  <name>testing</name>
  <version>0.1.0</version>
  <description>A package with a library and a test</description>

  <maintainer email="fmrico@gmail.com">fmrico</maintainer>

  <license>Apache 2</license>

  <author email="fmrico@gmail.com">Francisco Martín</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
